force-app/src/objects/cpm__Target_Property__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Target_Name__c</fullName>
        <label>Target Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Target Property</label>
    <nameField>
        <displayFormat>TP-{0}</displayFormat>
        <label>Target Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>